# docs

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  README.md  hooks.py  index.html  justfile  latest  mkdocs.yml  pyproject.toml  sitemap.xml  versions.json  zensical_hooks.py
.github/: renovate.json
.github/workflows/: ci.yml  preview.yml  republish-latest.yml
2026-Q1/: 404.html  index.html  sitemap.xml
2026-Q1/building-packages/: index.html
2026-Q1/cli/: index.html
2026-Q1/linux/: index.html
2026-Q1/preview/: index.html
2026-Q1/publishing-packages/: index.html
2026-Q1/release-notes/: index.html
2026-Q1/security/: index.html
2026-Q1/support/: index.html
2026-Q1/troubleshooting/: index.html
2026-Q1/vipm-editions-comparison/: index.html
2026-Q1/vipm-toml/: index.html
2026-Q3/: 404.html  index.html  search.json  sitemap.xml
2026-Q3/building-packages/: index.html
2026-Q3/cli/: index.html
2026-Q3/experimental/: index.html
2026-Q3/installation/: index.html
2026-Q3/linux/: index.html
2026-Q3/preview/: index.html
2026-Q3/publishing-packages/: index.html
2026-Q3/release-notes/: index.html
2026-Q3/report-a-problem/: index.html
2026-Q3/sbom/: index.html
2026-Q3/security/: index.html
2026-Q3/stylesheets/: extra.css
2026-Q3/support/: index.html
2026-Q3/troubleshooting/: index.html
2026-Q3/versions/: index.html
2026-Q3/vipm-editions-comparison/: index.html
building-packages/: index.html
cli/: index.html
data/: vipm-public-cli.json
dev/: 404.html  CNAME  index.html  sitemap.xml
dev-docs/: cli-docs-improvement-proposal.md  versioned-docs.md  vipm-toml-quick-start-guide.md  zensical-migration.md
docs/: experimental.md  index.md  installation.md  preview.md  report-a-problem.md  support.md  versions.md  vipm-editions-comparison.md
linux/: index.html
preview/: 404.html  index.html  search.json  sitemap.xml
publishing-packages/: index.html
release-notes/: index.html
report-a-problem/: index.html
scripts/: build_docs.py  dev_serve.py  generate_cli_snippets.py  generate_release_notes_table.py  validate_docs_build.py
search/: search_index.json
support/: index.html
tests/: conftest.py  test_build_docs_validators.py  test_dev_serve.py  test_generate_cli_snippets.py  test_generate_release_notes_table.py  test_validate_snippet_link_paths_are_absolute.py
troubleshooting/: index.html
vipm-editions-comparison/: index.html
vipm-toml/: index.html
vipm_io_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1352 files in other folders)
