[project]
name = "vipm-io-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # mike is published from https://github.com/squidfunk/mike (a Zensical-
    # compatible fork of jimporter/mike) rather than PyPI. The fork's
    # authors chose not to publish to PyPI; see
    # https://zensical.org/docs/setup/versioning/.
    "mike @ git+https://github.com/squidfunk/mike.git",
    "zensical>=0.0.46",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# E, F, W are ruff defaults; I adds isort-style import ordering.
select = ["E", "F", "W", "I"]
